# LTX-Desktop

./: .gitignore  AGENTS.md  HANDOFF.md  codemap.md  plan.md
backend/: api_types.py  app_factory.py  app_handler.py  export_openapi_schema.py  ltx2_server.py  pyproject.toml
backend/_routes/: model_profiles.py  models.py
backend/handlers/: __init__.py  codemap.md  download_handler.py  generation_handler.py  ic_lora_handler.py  model_profiles_handler.py  models_handler.py  pipelines_handler.py  retake_handler.py  text_handler.py  video_generation_handler.py
backend/runtime_config/: model_download_specs.py  runtime_policy.py
backend/server_utils/: media_validation.py
backend/services/: base_video_model_registry.py  codemap.md  color_management.py  exr_input.py  interfaces.py  ltx_components.py  ltx_pipeline_common.py  model_resolver.py  model_scanner.py  sequence_input.py
backend/services/a2v_pipeline/: a2v_pipeline.py  distilled_a2v_pipeline.py  ltx_a2v_pipeline.py
backend/services/fast_video_pipeline/: fast_video_pipeline.py  ltx_fast_video_pipeline.py
backend/services/hdr_ic_lora_pipeline/: __init__.py  hdr_ic_lora_pipeline.py  ltx_hdr_ic_lora_pipeline.py
backend/services/ic_lora_pipeline/: hdr_scene_embeddings.py  hdr_utils.py  ic_lora_pipeline.py  ltx_ic_lora_pipeline.py  official_inpaint.py
backend/services/media_encoder/: __init__.py  color.py  media_encoder.py  media_encoder_impl.py
backend/services/model_downloader/: download_transaction.py
backend/services/patches/: gguf_loader_fix.py  gguf_torch_dequant.py  safetensors_loader_fix.py  safetensors_metadata_fix.py  sequence_decode_patch.py
backend/services/retake_pipeline/: ltx_retake_pipeline.py  retake_pipeline.py
backend/state/: app_settings.py  app_state_types.py
backend/tests/: conftest.py  test_api_calls.py  test_color_management.py  test_exr_input.py  test_generation.py  test_generation_metrics.py  test_gguf_loader.py  test_hdr_scene_embeddings.py  test_hdr_utils.py  test_ic_lora.py  test_image_conditioning_crf.py  test_ltx_components.py  test_ltx_ic_lora_pipeline.py  test_ltx_split_safetensors.py  test_media_encoder.py  test_model_download_specs.py  test_model_downloader.py  test_model_profiles.py  test_model_resolver.py  test_model_scanner.py  test_models.py  test_runtime_policy_decision.py  test_safetensors_metadata_fix.py  test_sequence_input.py  test_settings.py  test_state_actions.py  test_text_encoder.py
(+86 files in other folders)
